# hgi80_parser

./: Cargo.toml  README.md
doc/: data.txt  notes.md
evohomelogger/: Cargo.toml
src/: hgi80.rs  lib.rs
