[package]
name = "hgi80_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hgi80-decoder"
path = "src/bin/main.rs"
doc = false

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
anyhow = "1.0"
serialport = "4.2.0"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.0.26", features = ["derive"] }
